# amicsartromanic/api/orm.py
@@ -1,7 +1,7 @@
 from sqlalchemy import create_engine, Column, DateTime, String, Integer, Table, ForeignKey
 from sqlalchemy.orm import scoped_session, sessionmaker, relationship
 from sqlalchemy.ext.declarative import declarative_base
-
+from werkzeug.security import generate_password_hash, check_password_hash
 
 Base = declarative_base()
 
@@ -63,6 +63,37 @@ class Images(Base):
             self.image_path = image_path
         if image_footer is not None:
             self.image_footer = image_footer
+                    
+    def dump(self):
+        return dict([(k,v) for k,v in self.__dict__.items() if k[0] != '_'])
+
+class User(Base):
+    __tablename__ = 'users'
+    id = Column(Integer, primary_key=True)
+    users_email = Column(String(255))
+    users_password = Column(String(128))
+    users_name = Column(String(255))
+    users_surname = Column(String(255))
+    users_role = Column(String(128))
+    #below our user model, we will create our hashing functions
+
+    def set_password(self, password):
+        self.users_password = generate_password_hash(password)
+
+    def check_password(self, password):
+        return check_password_hash(self.users_password, password) 
+  
+    def update(self, id=None, users_email=None, users_password=None, users_name=None, users_role=None):
+        if users_email is not None:
+            self.users_email = users_email
+        if users_password is not None:
+            self.users_password = self.set_password(self, users_password)
+        if users_name is not None:
+            self.users_name = users_name
+        if users_surname is not None:
+            self.users_surname = users_surname
+        if users_role is not None:
+            self.users_role = users_role
                     
     def dump(self):
         return dict([(k,v) for k,v in self.__dict__.items() if k[0] != '_'])
